Fixed bug #38464 (array_count_values() mishandles numeric strings).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@219515 c90b9560-bf6c-de11-be94-00142212c4b1